--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -1,31 +1,75 @@
-<form (ngSubmit)="onSubmit()">
-    <label for="name">Name:</label>
-    <input id="name" [(ngModel)]="user.name" name="name" required>
-  
-    <label for="surname">Surname:</label>
-    <input id="surname" [(ngModel)]="user.surname" name="surname" required>
-  
-    <label for="email">Email:</label>
-    <input id="email" [(ngModel)]="user.email" name="email" required>
-  
-    <label for="password">Password:</label>
-    <input id="password" type="password" [(ngModel)]="user.password" name="password" required>
-  
-    <label for="confirmPassword">Confirm Password:</label>
-    <input id="confirmPassword" type="password" [(ngModel)]="user.confirmPassword" name="confirmPassword" required>
-  
-    <label for="address">Address:</label>
-    <input id="address" [(ngModel)]="user.address" name="address">
-  
-    <label for="phoneNumber">Phone Number:</label>
-    <input id="phoneNumber" [(ngModel)]="user.phoneNumber" name="phoneNumber">
-  
-    <label for="role">Role:</label>
-    <select id="role" [(ngModel)]="user.role" name="role" required>
-      <option value="HOST">Host</option>
-      <option value="GUEST">Guest</option>
-    </select>
-  
-    <button type="submit">Register</button>
-  </form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <h2 class="text-center mb-4">Register</h2>
+        <form [formGroup]="registrationForm" (ngSubmit)="onSubmit()" novalidate>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" id="name" class="form-control" formControlName="name" [ngClass]="{'is-invalid': submitted && formControls['name'].errors}">
+            <div *ngIf="submitted && formControls['name'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['name'].errors['required']">Name is required</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="surname">Surname</label>
+            <input type="text" id="surname" class="form-control" formControlName="surname" [ngClass]="{'is-invalid': submitted && formControls['surname'].errors}">
+            <div *ngIf="submitted && formControls['surname'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['surname'].errors['required']">Surname is required</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" id="email" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && formControls['email'].errors}">
+            <div *ngIf="submitted && formControls['email'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['email'].errors['required']">Email is required</div>
+              <div *ngIf="formControls['email'].errors['email']">Invalid email format</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" id="password" class="form-control" formControlName="password" [ngClass]="{'is-invalid': submitted && formControls['password'].errors}">
+            <div *ngIf="submitted && formControls['password'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['password'].errors['required']">Password is required</div>
+              <div *ngIf="formControls['password'].errors['minlength']">Password must be at least 6 characters</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="confirmPassword">Confirm Password</label>
+            <input type="password" id="confirmPassword" class="form-control" formControlName="confirmPassword" [ngClass]="{'is-invalid': submitted && formControls['confirmPassword'].errors}">
+            <div *ngIf="submitted && formControls['confirmPassword'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['confirmPassword'].errors['required']">Confirm Password is required</div>
+              <div *ngIf="formControls['confirmPassword'].errors['mustMatch']">Passwords must match</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="address">Address</label>
+            <input type="text" id="address" class="form-control" formControlName="address" [ngClass]="{'is-invalid': submitted && formControls['address'].errors}">
+            <div *ngIf="submitted && formControls['address'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['address'].errors['required']">Address is required</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="phoneNumber">Phone Number</label>
+            <input type="text" id="phoneNumber" class="form-control" formControlName="phoneNumber" [ngClass]="{'is-invalid': submitted && formControls['phoneNumber'].errors}">
+            <div *ngIf="submitted && formControls['phoneNumber'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['phoneNumber'].errors['required']">Phone Number is required</div>
+              <div *ngIf="formControls['phoneNumber'].errors['pattern']">Invalid phone number</div>
+            </div>
+          </div>
+          <div class="form-group">
+            <label for="role">Role</label>
+            <select id="role" class="form-control" formControlName="role" [ngClass]="{'is-invalid': submitted && formControls['role'].errors}">
+              <option value="" disabled>Select a role</option>
+              <option value="HOST">Host</option>
+              <option value="GUEST">Guest</option>
+            </select>
+            <div *ngIf="submitted && formControls['role'].errors" class="invalid-feedback">
+              <div *ngIf="formControls['role'].errors['required']">Role is required</div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block mt-4">Register</button>
+        </form>
+      </div>
+    </div>
+  </div>
   
