--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -69,6 +69,12 @@
           </div>
           <button type="submit" class="btn btn-primary btn-block mt-4">Register</button>
         </form>
+
+        <br/>
+        <p>You already have an account?</p>
+        <a routerLink="/login">Login</a>
+        <br/>
+
       </div>
     </div>
   </div>
