--- a/front/src/app/components/registration/registration.component.html
+++ b/front/src/app/components/registration/registration.component.html
@@ -70,6 +70,11 @@
           <button type="submit" class="btn btn-primary btn-block mt-4">Register</button>
         </form>
 
+        <!-- Response Message -->
+        <div *ngIf="responseMessage" [ngClass]="{'success-message': isSuccess, 'error-message': !isSuccess}">
+          {{ responseMessage }}
+        </div>
+
         <br/>
         <p>You already have an account?</p>
         <a routerLink="/login">Login</a>
