--- a/front/src/app/components/accommodation-details/accommodation-details.component.html
+++ b/front/src/app/components/accommodation-details/accommodation-details.component.html
@@ -13,7 +13,7 @@
     <div class="redefine-form">
         <label for="newDates">Enter New Available Dates (comma-separated):</label>
         <input id="newDates" [(ngModel)]="newAvailableDates" placeholder="YYYY-MM-DD, YYYY-MM-DD">
-        <button (click)="redefineAccommodation()">Redefine Availability</button>
+        <button id="dugme" (click)="redefineAccommodation()">Redefine Availability</button>
     </div>
     
     <!-- Display response message -->
